# taeto

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
assets/lights/include/: Directional_Light.h  Point_Light.h  Spotlight.h
assets/lights/src/: Directional_Light.cpp  Point_Light.cpp  Spotlight.cpp
assets/scenes/include/: Collision_Detection_Test.h  LightFilterTest.h  Light_Mixing_Test.h  Normal_Mapping_Test.h  Test_Scene.h  transparency_test.h
assets/scenes/src/: Collision_Detection_Test.cpp  Light_Mixing_Test.cpp  Normal_Mapping_Test.cpp  Opening_Island.cpp  Test_Scene.cpp  transparency_test.cpp
assets/sprites/: Palm_Tree.cpp
assets/sprites/include/: Moving_Box.h  Night_Ocean_Skybox.h  Normal_Test.h  Opening_Island_Stage.h  Palm_Tree.h  Stationary_Box.h  Test_Box.h  White_Backdrop.h  Zero.h  collectible.h  light_filter.h
assets/sprites/src/: Moving_Box.cpp  Night_Ocean_Skybox.cpp  Normal_Test.cpp  Opening_Island_Stage.cpp  Palm_Tree.cpp  Stationary_Box.cpp  Test_Box.cpp  White_Backdrop.cpp  Zero.cpp  collectible.cpp  light_filter.cpp
examples/: demo.cpp  hdr_test.hpp  normal_mapping_test.cpp  normal_mapping_test.hpp
include/: Color.h  Engine.h  Frame.h  Light.h  Model.h  Object.h  Pixel.h  Sprite.h  Vector.h  engine.hpp  structs.h  tools.hpp
include/assets/lights/: directional_light.hpp  point_light.hpp  spotlight.hpp
include/assets/objects/: checkerboard.hpp  light_bulb.hpp  moving_box.hpp  sphere.hpp
include/assets/scenes/: collision_detection_test.hpp  demo.hpp  hdr_test.hpp  light_mixing_test.hpp  window_test.hpp
include/assets/sprites/: checkerboard.hpp  roflcopter.hpp  simple_x.hpp  sphere.hpp
include/assets/windows/: test_window.hpp
include/components/: camera.hpp  color.h  color.hpp  display_pixel.hpp  frame.h  light.h  object.h  pixel.h  position.hpp  q8.hpp  render_pixel.hpp  sprite.h  texture.h  vector.h  vector.hpp
include/components/object/: i_animated.hpp  i_light.hpp  i_physical_object.hpp  i_renderable.hpp  (+2 more)
include/frames/: albedo_frame.hpp  bool_frame.hpp  char_frame.hpp  color_frame.hpp  display_pixel_frame.hpp  float_frame.hpp  frame.hpp  render_pixel_frame.hpp  uchar_frame.hpp  vec3_frame.hpp  vec4_frame.hpp  vector_frame.hpp
include/message_layer/: Animate_Message.h  Apply_Forces_Message.h  Display_Frame_Message.h  Key_Update_Message.h  Light_Update_Message.h  Load_Skybox_Message.h  Message.h  Message_Bus.h  Message_Bus_Entry.h  Place_Camera_Message.h  Poll_Inputs_Message.h  Pre_Render_Message.h  Render_Frame_Message.h  Sprite_Update_Message.h
include/object/: i_light.hpp  i_physical_object.hpp  i_renderable.hpp  light.hpp  object.hpp  position.hpp  sprite.hpp
include/scene_layer/: Opening_Island.h  Scene.h
include/scenes/: scene.hpp
include/shaders/: shader.hpp
include/system_layer/: Audio_System.h  Display_System.h  Input_System.h  Physics_System.h  Render_System.h  System.h
include/systems/: audio_system.hpp  display_system.hpp  input_system.hpp  physics_system.hpp  render_system.hpp  system.hpp
include/taeto/: engine.hpp  tools.hpp
src/: Color.cpp  Engine.cpp  Frame.cpp  Light.cpp  Model.cpp  Object.cpp  Pixel.cpp  Sprite.cpp  Texture.cpp  Vector.cpp  engine.cpp  main.cpp  object.fbs  tools.cpp
src/components/: camera.cpp  color.cpp  display_pixel.cpp  frame.cpp  light.cpp  pixel.cpp  position.cpp  q8.cpp  render_pixel.cpp  sprite.cpp  vector.cpp
src/frames/: bool_frame.cpp  char_frame.cpp  color_frame.cpp  display_pixel_frame.cpp  float_frame.cpp  frame.cpp  render_pixel_frame.cpp  uchar_frame.cpp  vec3_frame.cpp  vec4_frame.cpp  vector_frame.cpp
src/message_layer/: Animate_Message.cpp  Apply_Forces_Message.cpp  Display_Frame_Message.cpp  Key_Update_Message.cpp  Light_Update_Message.cpp  Load_Skybox_Message.cpp  Message.cpp  Message_Bus.cpp  Message_Bus_Entry.cpp  Place_Camera_Message.cpp  Poll_Inputs_Message.cpp  Pre_Render_Message.cpp  Render_Frame_Message.cpp  Sprite_Update_Message.cpp
src/object/: light.cpp  object.cpp  position.cpp  sprite.cpp
src/objects/: camera.cpp  object.cpp
src/scene_layer/: Opening_Island.cpp  Scene.cpp
src/scenes/: scene.cpp
src/shaders/: checkerboard.cpp  shader.cpp
src/system_layer/: Audio_System.cpp  Display_System.cpp  Input_System.cpp  Physics_System.cpp  Render_System.cpp  System.cpp
src/systems/: audio_system.cpp  display_system.cpp  input_system.cpp  physics_system.cpp  render_system.cpp  system.cpp
src/widgets/: horizontal_layout.cpp  layout.cpp  text_box.cpp  vertical_layout.cpp  widget.cpp
taeto/: Cargo.toml
taeto/src/: main.rs
temp/: light_filter_test.cpp  opening_island.cpp  test_scene.cpp  test_scene.h  transparency_test.cpp  transparency_test.h
tests/: CMakeLists.txt  collision_detection_test.hpp  demo.cpp  hdr_test.cpp  light_filter_test.cpp  light_mixing_test.cpp  normal_mapping_test.cpp  simple_test.hpp  window_test.cpp
tools/: color_palette.py
(+532 files in other folders)
